integracion de menu

--- a/index.html
+++ b/index.html
@@ -14,23 +14,22 @@
             <img src="iconosdb.png" alt="Logo SDB" class="logo">
             <h1>Salud Da Belleza (SDB)</h1>
         </div>
-        <nav class="menu">
-            <ul>
+        <nav>
+            <ul class="menu">
                 <li><a href="#about">Acerca de</a></li>
                 <li><a href="#services">Servicios</a></li>
                 <li class="dropdown">
-                    <span>Galería</span>
+                    <button class="dropbtn">Más</button>
                     <div class="dropdown-content">
-                        <a href="#gallery1">Galería 1</a>
-                        <a href="#gallery2">Galería 2</a>
-                        <a href="#gallery3">Galería 3</a>
+                        <a href="#gallery">Galería</a>
+                        <a href="#contact">Contacto</a>
+                        <a href="#faq">FAQ</a>
                     </div>
                 </li>
-                <li><a href="#contact">Contacto</a></li>
             </ul>
         </nav>
     </header>
-    
+
     <!-- Main Section -->
     <main>
         <section id="gallery" class="gallery">
