--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <div class="header-container">
             <img src="iconosdb.png" alt="Logo SDB" class="logo">
             <h1>Salud Da Belleza (SDB)</h1>
+            <div class="cart">
+                <img src="cart-icon.png" alt="Carrito" class="cart-icon">
+                <span class="cart-count">0</span>
+            </div>
         </div>
         <nav>
             <ul class="menu">
@@ -32,25 +36,64 @@
 
     <!-- Main Section -->
     <main>
-        <section id="gallery" class="gallery">
-            <h2>Nuestra Galería</h2>
-            <div class="image-grid">
-                <!-- Placeholder for 15 images -->
-                <img src="sdb1.png" alt="Imagen 1">
-                <img src="sdb2.png" alt="Imagen 2">
-                <img src="sdb3.png" alt="Imagen 3">
-                <img src="sdb4.png" alt="Imagen 4">
-                <img src="sdb5.png" alt="Imagen 5">
-                <img src="sdb6.png" alt="Imagen 6">
-                <img src="sdb7.png" alt="Imagen 7">
-                <img src="sdb8.png" alt="Imagen 8">
-                <img src="sdb9.png" alt="Imagen 9">
-                <img src="sdb10.png" alt="Imagen 10">
-                <img src="sdb11.png" alt="Imagen 11">
-                <img src="sdb12.png" alt="Imagen 12">
-                <img src="sdb13.png" alt="Imagen 13">
-                <img src="sdb14.png" alt="Imagen 14">
-                <img src="sdb15.png" alt="Imagen 15">
+        <section id="products" class="products">
+            <h2>Nuestros Productos</h2>
+            <div class="product-list">
+                <!-- Ejemplo de producto -->
+                <div class="product">
+                    <img src="producto1.png.png" alt="Producto 1">
+                    <h3>Producto 1</h3>
+                    <p>$100.00</p>
+                    <button class="add-to-cart" data-product="Producto 1">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto2.png.png" alt="Producto 2">
+                    <h3>Producto 2</h3>
+                    <p>$150.00</p>
+                    <button class="add-to-cart" data-product="Producto 2">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto3.png.png" alt="Producto 1">
+                    <h3>Producto 3</h3>
+                    <p>$100.00</p>
+                    <button class="add-to-cart" data-product="Producto 3">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto4.png.png" alt="Producto 4">
+                    <h3>Producto 4</h3>
+                    <p>$100.00</p>
+                    <button class="add-to-cart" data-product="Producto 5">Agregar al Carrito</button>
+                    <div class="product">
+                        <img src="producto5.png.png" alt="Producto 5">
+                        <h3>Producto 5</h3>
+                        <p>$100.00</p>
+                        <button class="add-to-cart" data-product="Producto 5">Agregar al Carrito</button>
+                    </div>
+                    <div class="product">
+                        <img src="producto6.pngpng" alt="Producto 6">
+                        <h3>Producto 6</h3>
+                        <p>$100.00</p>
+                        <button class="add-to-cart" data-product="Producto 6">Agregar al Carrito</button>
+                    </div>
+                    <div class="product">
+                        <img src="producto7.pngpng" alt="Producto 7">
+                        <h3>Producto 7</h3>
+                        <p>$100.00</p>
+                        <button class="add-to-cart" data-product="Producto 7">Agregar al Carrito</button>
+                    </div>
+                    <div class="product">
+                        <img src="producto8.png.png" alt="Producto 8">
+                        <h3>Producto 8</h3>
+                        <p>$100.00</p>
+                        <button class="add-to-cart" data-product="Producto 8">Agregar al Carrito</button>
+                    </div>
+                    <div class="product">
+                        <img src="producto9.png.png" alt="Producto 9">
+                        <h3>Producto 9</h3>
+                        <p>$100.00</p>
+                        <button class="add-to-cart" data-product="Producto 9">Agregar al Carrito</button>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
@@ -62,5 +105,7 @@
         <p>Facebook: SDB Salud Da Belleza</p>
         <p>Correo: saluddabellezasdb@gmail.com</p>
     </footer>
+
+    <script src="carrito.js"></script>
 </body>
 </html>
