precios y descripcion del producto

--- a/index.html
+++ b/index.html
@@ -38,61 +38,61 @@
     <main>
         <section id="products" class="products">
             <h2>Nuestros Productos</h2>
-            <div class="product-list">
-                <!-- Ejemplo de producto -->
-                <div class="product">
-                    <img src="producto1.png.png" alt="Producto 1">
-                    <h3>Producto 1</h3>
-                    <p>$420.00</p>
-                    <button class="add-to-cart" data-product="Producto 1">Agregar al Carrito</button>
-                </div>
-                <div class="product">
-                    <img src="producto2.png.png" alt="Producto 2">
-                    <h3>Producto 2</h3>
-                    <p>$150.00</p>
-                    <button class="add-to-cart" data-product="Producto 2">Agregar al Carrito</button>
-                </div>
-                <div class="product">
-                    <img src="producto3.png.png" alt="Producto 1">
-                    <h3>Producto 3</h3>
-                    <p>$250.00</p>
-                    <button class="add-to-cart" data-product="Producto 3">Agregar al Carrito</button>
-                </div>
-                <div class="product">
-                    <img src="producto4.png.png" alt="Producto 4">
-                    <h3>Producto 4</h3>
-                    <p>$180.00</p>
-                    <button class="add-to-cart" data-product="Producto 5">Agregar al Carrito</button>
-                    <div class="product">
-                        <img src="producto5.png.png" alt="Producto 5">
-                        <h3>Producto 5</h3>
-                        <p>$780.00</p>
-                        <button class="add-to-cart" data-product="Producto 5">Agregar al Carrito</button>
-                    </div>
-                    <div class="product">
-                        <img src="producto6.pngpng" alt="Producto 6">
-                        <h3>Producto 6</h3>
-                        <p>$349.00</p>
-                        <button class="add-to-cart" data-product="Producto 6">Agregar al Carrito</button>
-                    </div>
-                    <div class="product">
-                        <img src="producto7.pngpng" alt="Producto 7">
-                        <h3>Producto 7</h3>
-                        <p>$498.00</p>
-                        <button class="add-to-cart" data-product="Producto 7">Agregar al Carrito</button>
-                    </div>
-                    <div class="product">
-                        <img src="producto8.png.png" alt="Producto 8">
-                        <h3>Producto 8</h3>
-                        <p>$50.00</p>
-                        <button class="add-to-cart" data-product="Producto 8">Agregar al Carrito</button>
-                    </div>
-                    <div class="product">
-                        <img src="producto9.png.png" alt="Producto 9">
-                        <h3>Producto 9</h3>
-                        <p>$198.00</p>
-                        <button class="add-to-cart" data-product="Producto 9">Agregar al Carrito</button>
-                    </div>
+            <div class="product">
+                <img src="producto1.png" alt="Producto 1">
+                <h3>Producto 1</h3>
+                <p>Es un quemador de grasa que ayuda a desgarrar la grasa vieja aculumada en ciertas partes del cuerpo, se toma todas las noches antes de dormir y se toma del trozo mas pequeño al mas grande, conforme mas lo tome va agrandando poco a poco el tamaño del producto</p>
+                <p>$420.00</p>
+                <button class="add-to-cart" data-product="Producto 1">Agregar al Carrito</button>
+            </div>
+            <div class="product">
+                <img src="producto2.png" alt="Producto 2">
+                <h3>Producto 2</h3>
+                <p>$150.00</p>
+                <button class="add-to-cart" data-product="Producto 2">Agregar al Carrito</button>
+            </div>
+            <div class="product">
+                <img src="producto3.png" alt="Producto 3">
+                <h3>Producto 3</h3>
+                <p>$250.00</p>
+                <button class="add-to-cart" data-product="Producto 3">Agregar al Carrito</button>
+            </div>
+            <div class="product">
+                <img src="producto4.png" alt="Producto 4">
+                <h3>Producto 4</h3>
+                <p>$180.00</p>
+                <button class="add-to-cart" data-product="Producto 4">Agregar al Carrito</button>
+            </div>
+            <div class="product">
+                <img src="producto5.png" alt="Producto 5">
+                <h3>Producto 5</h3>
+                <p>$780.00</p>
+                <button class="add-to-cart" data-product="Producto 5">Agregar al Carrito</button>
+            </div>
+            <div class="product">
+                <img src="producto6.png" alt="Producto 6">
+                <h3>Producto 6</h3>
+                <p>$349.00</p>
+                <button class="add-to-cart" data-product="Producto 6">Agregar al Carrito</button>
+            </div>
+            <div class="product">
+                <img src="producto7.png" alt="Producto 7">
+                <h3>Producto 7</h3>
+                <p>$498.00</p>
+                <button class="add-to-cart" data-product="Producto 7">Agregar al Carrito</button>
+            </div>
+            <div class="product">
+                <img src="producto8.png" alt="Producto 8">
+                <h3>Producto 8</h3>
+                <p>$50.00</p>
+                <button class="add-to-cart" data-product="Producto 8">Agregar al Carrito</button>
+            </div>
+            <div class="product">
+                <img src="producto9.png" alt="Producto 9">
+                <h3>Producto 9</h3>
+                <p>$198.00</p>
+                <button class="add-to-cart" data-product="Producto 9">Agregar al Carrito</button>
+            </div>
                 </div>
             </div>
         </section>
