--- a/index.html
+++ b/index.html
@@ -38,65 +38,126 @@
     <main>
         <section id="products" class="products">
             <h2>Nuestros Productos</h2>
-            <div class="product">
-                <img src="producto1.png" alt="Producto 1">
-                <h3>Producto 1</h3>
-                <p>Es un quemador de grasa que ayuda a desgarrar la grasa vieja aculumada en ciertas partes del cuerpo, se toma todas las noches antes de dormir y se toma del trozo mas pequeño al mas grande, conforme mas lo tome va agrandando poco a poco el tamaño del producto</p>
-                <p>$420.00</p>
-                <button class="add-to-cart" data-product="Producto 1">Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="producto2.png" alt="Producto 2">
-                <h3>Producto 2</h3>
-                <p>$150.00</p>
-                <button class="add-to-cart" data-product="Producto 2">Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="producto3.png" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p>$250.00</p>
-                <button class="add-to-cart" data-product="Producto 3">Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="producto4.png" alt="Producto 4">
-                <h3>Producto 4</h3>
-                <p>$180.00</p>
-                <button class="add-to-cart" data-product="Producto 4">Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="producto5.png" alt="Producto 5">
-                <h3>Producto 5</h3>
-                <p>$780.00</p>
-                <button class="add-to-cart" data-product="Producto 5">Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="producto6.png" alt="Producto 6">
-                <h3>Producto 6</h3>
-                <p>$349.00</p>
-                <button class="add-to-cart" data-product="Producto 6">Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="producto7.png" alt="Producto 7">
-                <h3>Producto 7</h3>
-                <p>$498.00</p>
-                <button class="add-to-cart" data-product="Producto 7">Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="producto8.png" alt="Producto 8">
-                <h3>Producto 8</h3>
-                <p>$50.00</p>
-                <button class="add-to-cart" data-product="Producto 8">Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="producto9.png" alt="Producto 9">
-                <h3>Producto 9</h3>
-                <p>$198.00</p>
-                <button class="add-to-cart" data-product="Producto 9">Agregar al Carrito</button>
-            </div>
+            <div class="product-list">
+                <div class="product">
+                    <img src="producto1.png" alt="Producto 1">
+                    <h3>Producto 1</h3>
+                    <p>$420.00</p>
+                    <button class="add-to-cart" data-product="Producto 1">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto2.png" alt="Producto 2">
+                    <h3>Producto 2</h3>
+                    <p>$150.00</p>
+                    <button class="add-to-cart" data-product="Producto 2">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto3.png" alt="Producto 3">
+                    <h3>Producto 3</h3>
+                    <p>$250.00</p>
+                    <button class="add-to-cart" data-product="Producto 3">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto4.png" alt="Producto 4">
+                    <h3>Producto 4</h3>
+                    <p>$180.00</p>
+                    <button class="add-to-cart" data-product="Producto 4">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto5.png" alt="Producto 5">
+                    <h3>Producto 5</h3>
+                    <p>$780.00</p>
+                    <button class="add-to-cart" data-product="Producto 5">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto6.png" alt="Producto 6">
+                    <h3>Producto 6</h3>
+                    <p>$379.00</p>
+                    <button class="add-to-cart" data-product="Producto 6">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto7.png" alt="Producto 7">
+                    <h3>Producto 7</h3>
+                    <p>$498.00</p>
+                    <button class="add-to-cart" data-product="Producto 7">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto8.png" alt="Producto 8">
+                    <h3>Producto 8</h3>
+                    <p>$50.00</p>
+                    <button class="add-to-cart" data-product="Producto 8">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto9.png" alt="Producto 9">
+                    <h3>Producto 9</h3>
+                    <p>$198.00</p>
+                    <button class="add-to-cart" data-product="Producto 9">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto10.png" alt="Producto 10">
+                    <h3>Producto 10</h3>
+                    <p>$180.00</p>
+                    <button class="add-to-cart" data-product="Producto 10">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto11.png" alt="Producto 11">
+                    <h3>Producto 11</h3>
+                    <p>$180.00</p>
+                    <button class="add-to-cart" data-product="Producto 11">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto12.png" alt="Producto 12">
+                    <h3>Producto 12</h3>
+                    <p>$180.00</p>
+                    <button class="add-to-cart" data-product="Producto 12">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto13.png" alt="Producto 13">
+                    <h3>Producto 13</h3>
+                    <p>$180.00</p>
+                    <button class="add-to-cart" data-product="Producto 13">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto14.png" alt="Producto 14">
+                    <h3>Producto 14</h3>
+                    <p>$180.00</p>
+                    <button class="add-to-cart" data-product="Producto 14">Agregar al Carrito</button>
+                </div>
+                <div class="product">
+                    <img src="producto15.png" alt="Producto 15">
+                    <h3>Producto 15</h3>
+                    <p>$180.00</p>
+                    <button class="add-to-cart" data-product="Producto 15">Agregar al Carrito</button>
                 </div>
             </div>
+            
         </section>
     </main>
+
+    <!-- Galería -->
+    <section id="gallery" class="gallery">
+        <h2>Galería</h2>
+        <div class="carousel">
+            <div class="carousel-container">
+                <div class="carousel-slide">
+                    <img src="sdb1.png" alt="Imagen 1">
+                </div>
+                <div class="carousel-slide">
+                    <img src="sdb2.png" alt="Imagen 2">
+                </div>
+                <div class="carousel-slide">
+                    <img src="sdb3.png" alt="Imagen 3">
+                </div>
+                <div class="carousel-slide">
+                    <img src="sdb4.png" alt="Imagen 4">
+                </div>
+            </div>
+            <button class="carousel-button prev">←</button>
+            <button class="carousel-button next">→</button>
+        </div>
+    </section>
+    
+
 
     <!-- Footer -->
     <footer id="contact">
@@ -104,8 +165,29 @@
         <p>Teléfono: 89993384563</p>
         <p>Facebook: SDB Salud Da Belleza</p>
         <p>Correo: saluddabellezasdb@gmail.com</p>
-    </footer>
 
+<!-- Scripts -->
     <script src="carrito.js"></script>
+    <script src="carrusel.js"></script>
+    <script>
+        function initMap() {
+            const location = { lat: 26.099907, lng: -98.292561 };
+            const map = new google.maps.Map(document.getElementById("map"), {
+                zoom: 15,
+                center: location,
+            });
+            const marker = new google.maps.Marker({
+                position: location,
+                map: map,
+                title: "Salud Da Belleza",
+            });
+            marker.addListener("click", () => {
+                window.open(`https://www.google.com/maps/search/?api=1&query=${location.lat},${location.lng}`, "_blank");
+            });
+        }
+    </script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyHvqP3cGWtIrDVUAJkVcxlcjRYC5XnB8&callback=initMap">
+    </script>
 </body>
 </html>
