ajustes de carrusel

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         <h2>Galería</h2>
         <div class="carousel">
             <div class="carousel-container">
+                <!-- Aquí se aplicará la animación para desplazar las imágenes -->
                 <div class="carousel-slide">
                     <img src="sdb1.png" alt="Imagen 1">
                 </div>
@@ -156,6 +157,7 @@
             <button class="carousel-button next">→</button>
         </div>
     </section>
+    
     
 
 
