--- a/index.html
+++ b/index.html
@@ -148,112 +148,94 @@
                     <li data-target="#theCarousel" data-slide-to="1"></li>
                     <li data-target="#theCarousel" data-slide-to="2"></li>
                     <li data-target="#theCarousel" data-slide-to="3"></li>
+                    <li data-target="#theCarousel" data-slide-to="4"></li>
+                    <li data-target="#theCarousel" data-slide-to="5"></li>
+                    <li data-target="#theCarousel" data-slide-to="6"></li>
+                    <li data-target="#theCarousel" data-slide-to="7"></li>
+                    <li data-target="#theCarousel" data-slide-to="8"></li>
+                    <li data-target="#theCarousel" data-slide-to="9"></li>
+                    <li data-target="#theCarousel" data-slide-to="10"></li>
+                    <li data-target="#theCarousel" data-slide-to="11"></li>
+                    <li data-target="#theCarousel" data-slide-to="12"></li>
+                    <li data-target="#theCarousel" data-slide-to="13"></li>
+                    <li data-target="#theCarousel" data-slide-to="14"></li>
+                    <li data-target="#theCarousel" data-slide-to="15"></li>
                 </ol>
     
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
                         <img src="sdb1.png" alt="Imagen 1"> 
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 1</h3>
-                            <p>Descripción de la imagen 1</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="sdb2.png" alt="Imagen 2">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 2</h3>
-                            <p>Descripción de la imagen 2</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="sdb3.png" alt="Imagen 3">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 3</h3>
-                            <p>Descripción de la imagen 3</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="sdb4.png" alt="Imagen 4">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 4</h3>
-                            <p>Descripción de la imagen 4</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="sdb5.png" alt="Imagen 5">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 5</h3>
-                            <p>Descripción de la imagen 5</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="sdb6.png" alt="Imagen 6">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 6</h3>
-                            <p>Descripción de la imagen 6</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="sdb7.png" alt="Imagen 7">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 7</h3>
-                            <p>Descripción de la imagen 7</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="sdb8.png" alt="Imagen 8">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 8</h3>
-                            <p>Descripción de la imagen 8</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="sdb9.png" alt="Imagen 9">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 9</h3>
-                            <p>Descripción de la imagen 9</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="sdb10.png" alt="Imagen 10">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 10</h3>
-                            <p>Descripción de la imagen 10</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="sdb11.png" alt="Imagen 11">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 11</h3>
-                            <p>Descripción de la imagen 11</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="sdb12.png" alt="Imagen 12">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 12</h3>
-                            <p>Descripción de la imagen 12</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="sdb13.png" alt="Imagen 13">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 13</h3>
-                            <p>Descripción de la imagen 13</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="sdb14.png" alt="Imagen 14">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 14</h3>
-                            <p>Descripción de la imagen 14</p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="sdb15.png" alt="Imagen 15">
                         <div class="carousel-caption d-none d-md-block">
-                            <h3>Imagen 15</h3>
-                            <p>Descripción de la imagen 15</p>
                         </div>
                     </div>
                 </div>
